# FastApiProj

./: .env  API_DOCUMENTATION_RU.md  CLAUDE.md  README.md  docker-compose.yml  news_platform.db  news_platform.db-shm  news_platform.db-wal  pyproject.toml
aiogram_bot/: app.py
docs/ru/: README.md
frontend/my-app/: next.config.ts  package-lock.json  package.json
frontend/my-app/app/: globals.css  layout.tsx  page.tsx
frontend/my-app/app/about/: page.tsx
frontend/my-app/app/admin/: page.tsx
frontend/my-app/app/categories/: page.tsx
frontend/my-app/app/category/[slug]/: page.tsx
frontend/my-app/app/news/: page.tsx
frontend/my-app/app/news/[id]/: page.tsx
frontend/my-app/app/profile/: page.tsx
frontend/my-app/app/signin/: page.tsx
frontend/my-app/app/signup/: page.tsx
frontend/my-app/components/: article-interactions.tsx  category-drawer.tsx  category-nav.tsx  category-sidebar.tsx  footer.tsx  header.tsx  news-card.tsx  view-tracker.tsx
frontend/my-app/components/ui/: toast.tsx
frontend/my-app/contexts/: auth-context.tsx
frontend/my-app/lib/: api.ts
scripts/: seed_categories.py
src/: main.py
src/api/v1/routes/: admin.py  articles.py  auth.py  category.py  router.py
src/config/: config.py
src/db/: models.py
src/shemas/: __init__.py  admin_schemas.py  article_schemas.py  category_schemas.py  common_schemas.py  newsletter_schemas.py
